[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/GameCamera.gd" type="Script" id=1]
[ext_resource path="res://Game/CameraController.gd" type="Script" id=2]
[ext_resource path="res://Artwork/resourse_background.png" type="Texture" id=3]
[ext_resource path="res://Artwork/food.png" type="Texture" id=4]
[ext_resource path="res://Artwork/wood.png" type="Texture" id=5]
[ext_resource path="res://Artwork/money.png" type="Texture" id=6]
[ext_resource path="res://Font/Inter-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Artwork/villager_house.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="GameCamera" type="KinematicBody2D"]
position = Vector2( 253, 160 )
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1, -2 )
current = true
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 433.0
margin_right = 209.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourseBackground" type="Sprite" parent="CanvasLayer"]
position = Vector2( 106.5, 575.531 )
scale = Vector2( 3.26562, 1.8776 )
texture = ExtResource( 3 )

[node name="Money" type="Sprite" parent="CanvasLayer/ResourseBackground"]
position = Vector2( 23.4258, 0.249634 )
scale = Vector2( 0.642491, 0.849655 )
texture = ExtResource( 6 )

[node name="VilagersOnResource" type="Label" parent="CanvasLayer/ResourseBackground"]
margin_left = -27.4067
margin_top = -6.1416
margin_right = 113.593
margin_bottom = 150.858
rect_scale = Vector2( 0.0661101, 0.113039 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceAmount" type="Label" parent="CanvasLayer/ResourseBackground"]
margin_left = -13.0
margin_top = -11.0
margin_right = 280.0
margin_bottom = 114.0
rect_scale = Vector2( 0.102482, 0.190007 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourseBackground2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 106.5, 535 )
scale = Vector2( 3.26563, 1.79167 )
texture = ExtResource( 3 )

[node name="Food" type="Sprite" parent="CanvasLayer/ResourseBackground2"]
position = Vector2( 22.201, 0.558184 )
scale = Vector2( 0.549498, 0.969936 )
texture = ExtResource( 4 )

[node name="VilagersOnResource" type="Label" parent="CanvasLayer/ResourseBackground2"]
margin_left = -27.4067
margin_top = -6.1394
margin_right = 113.593
margin_bottom = 150.861
rect_scale = Vector2( 0.0662987, 0.121403 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceAmount" type="Label" parent="CanvasLayer/ResourseBackground2"]
margin_left = -13.0
margin_top = -12.0
margin_right = 284.0
margin_bottom = 113.0
rect_scale = Vector2( 0.0989716, 0.200498 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourseBackground3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 106.438, 494 )
scale = Vector2( 3.26758, 1.85547 )
texture = ExtResource( 3 )

[node name="Wood" type="Sprite" parent="CanvasLayer/ResourseBackground3"]
position = Vector2( 21.9008, -1.0779 )
scale = Vector2( 0.800187, 0.98117 )
texture = ExtResource( 5 )

[node name="VilagersOnResource" type="Label" parent="CanvasLayer/ResourseBackground3"]
margin_left = -27.3712
margin_top = -5.92847
margin_right = 113.629
margin_bottom = 151.072
rect_scale = Vector2( 0.0712834, 0.111296 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceAmount" type="Label" parent="CanvasLayer/ResourseBackground3"]
margin_left = -13.0
margin_top = -11.0
margin_right = 285.0
margin_bottom = 114.0
rect_scale = Vector2( 0.0943267, 0.214837 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulationCount" type="Sprite" parent="CanvasLayer"]
position = Vector2( 106.438, 453 )
scale = Vector2( 3.26758, 1.85547 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="CanvasLayer/PopulationCount"]
margin_left = -28.0
margin_top = -7.0
margin_right = -15.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopulationAmount" type="Label" parent="CanvasLayer/PopulationCount"]
margin_left = -12.6814
margin_top = -6.46729
margin_right = 370.319
margin_bottom = 118.533
rect_scale = Vector2( 0.069516, 0.135454 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "2/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VillagerHouse" type="Sprite" parent="CanvasLayer/PopulationCount"]
position = Vector2( 22.2068, 0 )
scale = Vector2( 0.0893305, 0.130983 )
texture = ExtResource( 8 )
